--- a/taller/flask/templates/lospropietarios.html
+++ b/taller/flask/templates/lospropietarios.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Demo</title>
+    <title>Propietarios</title>
   </head>
   <body>
     <h5>Listado de propietarios - {{nro_propietarios}}</h5>
