--- a/taller/flask/templates/losdepartamentos.html
+++ b/taller/flask/templates/losdepartamentos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Teléfonos - 1</title>
+    <title>Departamentos</title>
   </head>
   <body>
     <h5>Listado de departamentos - {{numero}}</h5>
